# Hemm

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.ipynb  test.py
.github/workflows/: deploy.yml  tests.yml
docs/: eval_pipelines.md  index.md  utils.md
docs/metrics/: image_quality.md  prompt_image_alignment.md  spatial_relationship.md  vqa.md
docs/models/: diffusion_model.md  falai_model.md  stability_model.md
eval_pipelines/: index.html
examples/: evaluate_weave_gt_image.py  evaluate_weave_image_quality.py  evaluate_weave_prompt_alignment.py  publish_dataset.ipynb
examples/2d_spatial_eval/: analyze_t2i_compbench_spatial_prompts.py  evaluate_spatial_relationship.py  evaluate_spatial_relationship_detr.py  evaluate_spatial_relationship_rt_detr.py  generate_spatial_relationship_dataset.ipynb
examples/disentangled_vqa/: evaluate_disentangled_vqa.py  generate_attribute_dataset.py
examples/multimodal_llm_eval/: evaluate_mllm_metric_complex.py  evaluate_mllm_metric_complex_stability.py
hemm/: utils.py
hemm/eval_pipelines/: __init__.py  base.py  eval_pipeline.py  hemm_evaluation.py  model.py  stable_diffusion_evaluation.py
hemm/metrics/: __init__.py  base.py
hemm/metrics/attribute_binding/: __init__.py  attribute_binding_model.py  dataset_generator.py  disentangled_vlm.py  disentangled_vqa.py
hemm/metrics/attribute_binding/judges/: blip_vqa.py
hemm/metrics/image_quality/: __init__.py  base.py  fid.py  lpips.py  psnr.py  ssim.py
hemm/metrics/prompt_alignment/: __init__.py  base.py  blip_score.py  blip_scorer.py  clip_iqa_score.py  clip_iqa_scorer.py  clip_score.py  clip_scorer.py
hemm/metrics/spatial_alignment/: analyze_prompt.py
hemm/metrics/spatial_relationship/: __init__.py  analyze_prompt.py  spatial_relationship.py  spatial_relationship_2d.py  utils.py
hemm/metrics/spatial_relationship/judges/: __init__.py  commons.py  detr.py  rt_detr.py
hemm/metrics/vqa/: __init__.py  dataset_generator.py  disentangled_vqa.py  multi_modal_llm_eval.py  vlm_eval.py
hemm/metrics/vqa/dataset_generator/: __init__.py  attribute_binding.py
hemm/metrics/vqa/judges/: __init__.py  blip_vqa.py
hemm/metrics/vqa/judges/lvlm_judges/: __init__.py  commons.py  openai_judge.py
hemm/metrics/vqa/judges/mmllm_judges/: __init__.py  commons.py  openai_judge.py
hemm/models/: __init__.py  diffusion_model.py  falai_model.py  stability_model.py
hemm/tests/: test_2d_spatial_relationship_eval.py  test_disentangled_vqa.py  test_image_quality_eval.py  test_mllm_eval.py  test_prompt_alignment_eval.py  test_utils.py
metrics/disentangled_vqa/: index.html
metrics/image_quality/: index.html
metrics/notebooks/generate_spatial_relationship_dataset/: generate_spatial_relationship_dataset.ipynb  index.html
metrics/prompt_image_alignment/: index.html
metrics/spatial_relationship/: index.html
metrics/vqa/disentangled_vqa/: disentangled_vqa.md  index.html
metrics/vqa/multi_modal_llm/: index.html  multi_modal_llm.md
models/diffusion_model/: index.html
models/falai_model/: index.html
models/stability_model/: index.html
scripts/: evaluate.py  evaluate_wandb_table.py  evaluate_weave.py  evaluate_weave_gt_image.py  publish_dataset.ipynb  publish_dataset.py
search/: search_index.json
t2i_diffusion_benchmark/: __init__.py  image_quality_scorers.py  stable_diffusion_evaluation.py  utils.py
t2i_diffusion_benchmark/eval_pipelines/: __init__.py  stable_diffusion_evaluation.py
t2i_diffusion_benchmark/metrics/: __init__.py  image_quality_scorers.py
utils/: index.html
