[tool.poetry]
name = "hemm"
version = "0.1.0"
description = ""
authors = ["soumik12345 <19soumik.rakshit96@gmail.com>"]
readme = "README.md"
packages = [{ include = "hemm" }]

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.27.2"
accelerate = "^0.30.1"
wandb = "^0.18.3"
poetry = "^1.8.3"
weave = "^0.51.12"
huggingface-hub = "^0.23.0"
datasets = "^2.19.1"
fal_client = "^0.5.0"
fire = "^0.6.0"
mkdocs = "^1.6.1"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.11.1"
mkdocs-material = "^9.5.39"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-glightbox = "^0.4.0"
mkdocs-jupyter = "^0.25.0"
jupyter = "^1.1.1"
black = "^24.4.2"
torcheval = "^0.0.7"
ruff = "^0.4.5"
openai = "^1.33.0"
transformers = "^4.41.2"
jsonlines = "^4.0.0"
spacy = "^3.7.5"
instructor = "^1.5.2"
torchmetrics = { extras = ["multimodal"], version = "^1.4.1" }
sentencepiece = "^0.2.0"

[tool.poetry.extras]
core = [
    "diffusers",
    "transformers",
    "accelerate",
    "wandb",
    "weave",
    "poetry",
    "huggingface-hub",
    "datasets",
    "fire",
    "fal_client",
    "jsonlines",
    "spacy",
    "instructor",
    "torchmetrics",
    "sentencepiece",
]
docs = [
    "mkdocs",
    "mkdocstrings",
    "mkdocs-material",
    "mkdocs-minify-plugin",
    "mkdocs-glightbox",
    "mkdocs-jupyter",
    "jupyter",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"