[project]
name = "hemm"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.30.3",
    "accelerate>=1.0.1",
    "huggingface-hub>=0.25.2",
    "datasets>=3.0.1",
    "fire>=0.7.0",
    "fal_client>=0.5.0",
    "instructor>=1.6.1",
    "jsonlines>=4.0.0",
    "openai>=1.51.2",
    "sentencepiece>=0.2.0",
    "torcheval>=0.0.7",
    "torchmetrics[multimodal]>=1.4.1,<2.0.0",
    "transformers>=4.45.2",
    "spacy>=3.8.2",
    "wandb>=0.18.3",
    "weave==0.51.14",
    "uv>=0.4.22",
    "pip>=24.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.6.9",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.0",
    "jupyter>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.setuptools]
py-modules = ["hemm"]
